--- a/RMS/src/main/resources/templates/navbar.html
+++ b/RMS/src/main/resources/templates/navbar.html
@@ -38,7 +38,7 @@
           <a class="nav-link" style="font-size: x-large;font-family:cursive;color:white;font-size:170%;" href="/rms/adminLogin">Admin</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="font-size: x-large;font-family:cursive;color:white;font-size:170%;" href="/rms/customerLogin" >User</a>
+          <a class="nav-link" style="font-size: x-large;font-family:cursive;color:white;font-size:170%;" href="/rms/customerLogin" >Customer</a>
         </li>    
       </ul>
     </div>
