--- a/RMS/src/main/resources/templates/navbar.html
+++ b/RMS/src/main/resources/templates/navbar.html
@@ -22,25 +22,94 @@
 	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 	crossorigin="anonymous"></script>
 <style>
-
-  </style>
+</style>
 </head>
 <body>
-  <nav th:fragment="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark m-0 p-0"  style="background-color: black;">
-       <span class="navbar-brand" style="margin-left: 30px;font-family: cursive;font-size: x-large;color: cadetblue;font-size:230%;">C<span style="font-family: cursive;color: cadetblue;font-size: x-large;">how</span></span>
-       <span class="navbar-brand" style="font-family: cursive;font-size: x-large;color: cadetblue;font-size:230%;">D<span style="font-family: cursive;color: cadetblue;font-size: x-large;">own!</span></span>
-    <div class="collapse navbar-collapse justify-content-end" style="margin-right: 50px;">
-      <ul class="navbar-nav">
-        <li class="nav-item" style="margin-right: 30px;">
-          <a class="nav-link" style="font-size: x-large;font-family:cursive;color:white;font-size:170%;" href="/rms">Home</a>
-        </li>
-        <li class="nav-item" style="margin-right: 30px;">
-          <a class="nav-link" style="font-size: x-large;font-family:cursive;color:white;font-size:170%;" href="/rms/adminLogin">Admin</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" style="font-size: x-large;font-family:cursive;color:white;font-size:170%;" href="/rms/customerLogin" >Customer</a>
-        </li>    
-      </ul>
-    </div>
-  </nav>
+	<nav th:fragment="navbar"
+		class="navbar navbar-expand-sm navbar-dark bg-dark m-0 p-0"
+		style="background-color: black;">
+		<span class="navbar-brand"
+			style="margin-left: 30px; font-family: cursive; font-size: x-large; color: cadetblue; font-size: 230%;">C<span
+			style="font-family: cursive; color: cadetblue; font-size: x-large;">how</span></span>
+		<span class="navbar-brand"
+			style="font-family: cursive; font-size: x-large; color: cadetblue; font-size: 230%;">D<span
+			style="font-family: cursive; color: cadetblue; font-size: x-large;">own!</span></span>
+		<div class="collapse navbar-collapse justify-content-end"
+			style="margin-right: 50px;">
+
+			<div th:switch="${session.role}">
+				<div th:case="Admin">
+					<ul class="navbar-nav">
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/admin/home">Home</a></li>
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/admin/menu">Menu</a></li>
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/admin/logout">Logout</a></li>
+					</ul>
+				</div>
+				<div th:case="Waiter">
+					<ul class="navbar-nav">
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/waiter/home">Home</a></li>
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/waiter/orders">Orders</a></li>
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/waiter/logout">Logout</a></li>
+					</ul>
+				</div>
+
+				<div th:case="Customer">
+					<ul class="navbar-nav">
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/customer/home">Home</a></li>
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/customer/tablebooking">Book a Table</a></li>
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/customer/logout">Logout</a></li>
+					</ul>
+				</div>
+
+				<div th:case="*">
+					<ul class="navbar-nav">
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/home">Home</a></li>
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/admin/login">Admin</a></li>
+						<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/waiter/login">Server</a></li>
+						<li class="nav-item"><a class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/customer/login">Customer</a></li>
+					</ul>
+				</div>
+
+			</div>
+
+		</div>
+	</nav>
 </body>
