--- a/RMS/src/main/resources/templates/adminHome.html
+++ b/RMS/src/main/resources/templates/adminHome.html
@@ -25,9 +25,9 @@
 <style>
 .bg-img {
 	background-image:
-		url('https://c4.wallpaperflare.com/wallpaper/416/395/607/airplane-download-pictures-wallpaper-preview.jpg');
-	height: 90.2vh;
-	width: 100%;
+		url('/rms/foodtable.gif');
+	height: 90.8vh;
+	width: 70%;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -62,7 +62,7 @@ a {
 <body>
 	<div th:insert="navbar :: navbar"></div>
 	<div class="container-fluid bg-img"></div>
-	</div>
+
 
 
 </body>
