--- a/RMS/src/main/resources/templates/adminLogin.html
+++ b/RMS/src/main/resources/templates/adminLogin.html
@@ -49,65 +49,76 @@
 body {
 	overflow: hidden;
 }
+
+#bg-img {
+	background-image: url("/rms/adminlogin.jpg");
+	height: 100vh;
+	width: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
 </style>
 </head>
 <body>
 	<div th:insert="navbar :: navbar"></div>
-	<div class="row">
-		<div class="col-md-3"></div>
-		<div class="col-md-6 mt-5">
+	<div class="container-fluid">
+		<div class="text-center"></div>
+		<div class="row">
+			<div class="col-md-6" id="bg-img"></div>
+			<div class="col-md-6 mt-5">
+				<h1 style="font-family: cursive; font-size: xx-large; color: #007bff;" class="text-center" >Admin</h1>
+					<div class="row">
+					<div class="col-md-6 offset-md-3">
+				<div class="card border-0">
+					<div class="card-body">
 
-			<div class="container-fluid">
-
-				<div class="text-center">
-
-					<h1
-						style="color: #007bff; font-family: cursive; font-size: xx-large;">Admin</h1>
-				</div>
-				<div class="row">
-					<div class="col-md-7 offset-md-3">
-						<div class="card border-0">
-							<div class="card-body">
-
-								<div class="container">
-									<h4 style="color: red;padding-bottom:5px;font-family: cursive" th:text="${msg}"></h4>
-								</div>
-								<form th:action="@{home}" th:object="${Admin}" method="POST">
-									<div class="form-group">
-										<span style="font-family: cursive;font-size: x-large;color: black;font-size:160%;">Username</span> <input type="text" required="required"
-											class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1.5"
-											id="email" aria-describedby="emailHelp" name="email"
-											autofocus>
-									</div>
-									<br>
-									<div class="form-group">
-
-										<span style="font-family: cursive;font-size: x-large;color: black;font-size:160%;">Password</span> <input
-											required="required" type="password"
-											class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1.5"
-											id="password" name="password" /> <br>
-									</div>
-									<br>
-									<center>
-										<button type="submit" class="btn btn-primary btn-block">
-											<h4 style="font-family: cursive;font-size: x-large;color: white;font-size:170%;">&nbsp;&nbsp;&nbsp;Login&nbsp;&nbsp;&nbsp;</h4>
-										</button>
-									</center>
-									<br>
-
-
-
-								</form>
-
-							</div>
-
+						<div class="container">
+							<h4 style="color: red; padding-bottom: 5px; font-family: cursive"
+								th:text="${msg}"></h4>
 						</div>
+						<form th:action="@{login}" th:object="${Admin}" method="POST">
+							<div class="form-group">
+								<span
+									style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">Username</span>
+								<input
+									style="font-family: cursive; color: black; font-size: 120%;"
+									type="text" required="required"
+									class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1.5"
+									id="username" aria-describedby="emailHelp" name="username"
+									autofocus>
+							</div>
+							<br>
+							<div class="form-group">
+
+								<span
+									style="font-family: cursive; font-size: x-large; color: black; font-size: 160%;">Password</span>
+								<input required="required" type="password"
+									style="font-family: cursive; color: black; font-size: 120%;"
+									class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1.5"
+									id="password" name="password" /> <br>
+							</div>
+							<br>
+							<center>
+								<button type="submit" class="btn btn-primary btn-block">
+									<h4
+										style="font-family: cursive; font-size: x-large; color: white; font-size: 170%;">&nbsp;&nbsp;&nbsp;Login&nbsp;&nbsp;&nbsp;</h4>
+								</button>
+							</center>
+							<br>
+
+
+
+						</form>
 
 					</div>
-				</div>
 
+				</div>
+				</div>
+				</div>
 			</div>
 		</div>
+
 	</div>
+
 </body>
 </html>
