--- a/RMS/src/main/resources/templates/navbar.html
+++ b/RMS/src/main/resources/templates/navbar.html
@@ -5,7 +5,7 @@
 
 <head>
 <meta charset="UTF-8" />
-<title>Chow</title>
+<title>savory</title>
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
@@ -26,14 +26,14 @@
 </head>
 <body>
 	<nav th:fragment="navbar"
-		class="navbar navbar-expand-sm navbar-dark bg-dark m-0 p-0"
-		style="background-color: black;">
+		class="navbar navbar-expand-sm navbar-dark m-0 p-0"
+		style="background-color:black;">
 		<span class="navbar-brand"
-			style="margin-left: 30px; font-family: cursive; font-size: x-large; color: cadetblue; font-size: 230%;">C<span
-			style="font-family: cursive; color: cadetblue; font-size: x-large;">how</span></span>
-		<span class="navbar-brand"
+			style="margin-left: 50px; font-family: cursive; font-size: x-large; color: cadetblue; font-size: 230%;">S<span
+			style="font-family: cursive; color: cadetblue; font-size: x-large;">avory </span></span>
+		<!--  <span class="navbar-brand"
 			style="font-family: cursive; font-size: x-large; color: cadetblue; font-size: 230%;">D<span
-			style="font-family: cursive; color: cadetblue; font-size: x-large;">own!</span></span>
+			style="font-family: cursive; color: cadetblue; font-size: x-large;">own!</span></span> -->
 		<div class="collapse navbar-collapse justify-content-end"
 			style="margin-right: 50px;">
 
@@ -48,6 +48,10 @@
 							class="nav-link"
 							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
 							href="/rms/admin/menu">Menu</a></li>
+							<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/admin/tables">Tables</a></li>
 						<li class="nav-item" style="margin-right: 30px;"><a
 							class="nav-link"
 							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
@@ -104,7 +108,7 @@
 							href="/rms/waiter/login">Server</a></li>
 						<li class="nav-item"><a class="nav-link"
 							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
-							href="/rms/customer/login">Customer</a></li>
+							href="/rms/customer/login">Reserve a Table </a></li>
 					</ul>
 				</div>
 
