--- a/RMS/src/main/resources/templates/waiterLogin.html
+++ b/RMS/src/main/resources/templates/waiterLogin.html
@@ -73,19 +73,18 @@ body {
 									<!--  	<h3 class="text-center" style="color: red;">{{message}}</h3> -->
 									<h4 style="padding-bottom:5px;font-family: cursive;" th:style="|${color == 'red' ? 'color: red;' : 'color: green;'}|" th:text="${msg}"></h4>
 								</div>
-								<form th:action="@{home}" th:object="${waiter}"
-									method="POST">
+								<form th:action="@{login}" th:object="${Waiter}" method="POST">
 									<div class="form-group">
 										<span style="font-family: cursive;font-size: x-large;color: black;font-size:160%;">Username</span> <input type="email" required="required"
 											class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1px"
-											id="email" aria-describedby="emailHelp" name="email"
+											style="font-family: cursive;color: black;font-size:120%;" id="email" aria-describedby="emailHelp" name="username"
 											autofocus>
 									</div>
 									<br>
 									<div class="form-group">
 
 										<span style="font-family: cursive;font-size: x-large;color: black;font-size:160%;">Password</span> <input
-											required="required" type="password"
+											required="required" type="password" style="font-family: cursive;color: black;font-size:120%;"
 											class="form-control mt-2 border-left-0 border-top-0 border-right-0"
 											id="password" name="password" /> <br>
 									</div>
