--- a/RMS/src/main/resources/templates/navbar.html
+++ b/RMS/src/main/resources/templates/navbar.html
@@ -67,7 +67,7 @@
 						<li class="nav-item" style="margin-right: 30px;"><a
 							class="nav-link"
 							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
-							href="/rms/waiter/table">Table</a></li>
+							href="/rms/waiter/assignedtable">Table</a></li>
 						<li class="nav-item" style="margin-right: 30px;"><a
 							class="nav-link"
 							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
