--- a/RMS/src/main/resources/templates/orders.html
+++ b/RMS/src/main/resources/templates/orders.html
@@ -19,44 +19,61 @@
 	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 	crossorigin="anonymous"></script>
 <style>
+.card {
+	/* 	border-radius: 50px 20px; */
+	padding: 10px;
+	/* border: 2px solid blue; */
+}
+
+.form-control {
+	border-radius: 0px;
+}
+
+.form-control:hover {
+	border-radius: 5px;
+}
+
 .bg-img {
 	background-image:
-		url('https://c4.wallpaperflare.com/wallpaper/416/395/607/airplane-download-pictures-wallpaper-preview.jpg');
-	height: 90.2vh;
+		url('/rms/item.gif"');
+	height: 100vh;
 	width: 100%;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
-.body {
+body {
 	overflow: hidden;
 }
 
-button {
-	color: orange;
-	background-color: black;
-	font-size: 19px;
-	border: 1px solid #2d63c8;
-	padding: 15px 50px;
-	cursor: pointer;
-	width: 250px;
-}
-
-button:hover {
-	color: #2d63c8;
-	background-color: #ffffff;
-}
-
-a {
-	text-decoration: none;
+#bg-img {
+	background-image: url('/rms/item.gif');
+	height: 100vh;
+	width: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 </style>
 
 </head>
 <body>
 <div th:insert="navbar :: navbar"></div>
-	<div class="container-fluid bg-img">
-	<form th:action="@{orderitem}" th:object="${orderItems}" method="Get">
+	<div class="container-fluid">
+		<div class="text-center"></div>
+		<div class="row">
+			<div class="col-md-7" id="bg-img"></div>
+			<div class="col-md-5 mt-5">
+				<h1 style="font-family: cursive; font-size: xx-large; color: #007bff;" class="text-center" >order Item</h1>
+					<div class="row">
+					<div class="col-md-8 offset-md-3">
+				<div class="card border-0">
+					<div class="card-body">
+
+						<div class="container">
+							<h4 style="color: green; padding-bottom: 5px; font-family: cursive"
+								th:text="${msg}"></h4>
+						</div>
+							<form th:action="@{orderitem}" th:object="${orderItems}" method="Get">
 									<div class="form-group">
 										<span style="font-family: cursive;font-size: x-large;color: black;font-size:160%;">Item</span> <input type="text" required="required"
 											class="form-control mt-2 border-left-0 border-top-0 border-right-0 border-bottom-1px"
@@ -71,10 +88,13 @@ a {
 											class="form-control mt-2 border-left-0 border-top-0 border-right-0"
 											id="quantity" name="quantity" /> <br>
 									</div>
+									<div>
+									<input hidden >
+									</div>
 									<br>
 									<center>
 										<button type="submit" class="btn btn-primary btn-block">
-											<h4 style="font-family: cursive;font-size: x-large;color: white;font-size:170%;">&nbsp;&nbsp;&nbsp;Login&nbsp;&nbsp;&nbsp;</h4>
+											<h4 style="font-family: cursive;font-size: x-large;color: white;font-size:170%;">&nbsp;&nbsp;&nbsp;order&nbsp;&nbsp;&nbsp;</h4>
 										</button>
 									</center>
 									<br>
@@ -82,6 +102,14 @@ a {
 
 
 								</form>
-								</div>
+							</div>
+
+				</div>
+				</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
 </body>
 </html>
