--- a/RMS/src/main/resources/templates/viewTables.html
+++ b/RMS/src/main/resources/templates/viewTables.html
@@ -119,7 +119,7 @@ body {
 								<br>
 								<center>
 									<button type="submit" class="btn btn-primary">
-										<h4>&nbsp;&nbsp;&nbsp;Add Table&nbsp;&nbsp;&nbsp;</h4>
+										<h4>&nbsp;&nbsp;&nbsp;Add/Edit Table&nbsp;&nbsp;&nbsp;</h4>
 									</button>
 								</center>
 								<br>
