--- a/RMS/src/main/resources/templates/item.html
+++ b/RMS/src/main/resources/templates/item.html
@@ -123,7 +123,7 @@ body {
 								<br>
 								<center>
 									<button type="submit" class="btn btn-primary">
-										<h4>&nbsp;&nbsp;&nbsp;Add Item&nbsp;&nbsp;&nbsp;</h4>
+										<h4>&nbsp;&nbsp;&nbsp;Add/Edit Item&nbsp;&nbsp;&nbsp;</h4>
 									</button>
 								</center>
 								<br>
