--- a/RMS/src/main/resources/templates/reserveTable.html
+++ b/RMS/src/main/resources/templates/reserveTable.html
@@ -50,6 +50,10 @@ body {
 	overflow: hidden;
 }
 </style>
+<script type="text/javascript">
+
+
+</script>
 </head>
 <body>
 	<div th:insert="navbar :: navbar"></div>
@@ -102,10 +106,10 @@ body {
 									<div class="form-group">
 
 										<span style="font-family: cursive;font-size: x-large;color: black;font-size:160%;">To Date</span> <input
-											required="required" type="datetime-local"
+											required="required" type="time"
 											class="form-control mt-2 border-left-0 border-top-0 border-right-0"
 											style="font-family: cursive;font-size: x-large;color: black;font-size:100%;"
-											id="to_date" name="to_date" /> 
+											id="to_date_convert" name="to_date_convert" max="24" /> 
 									</div>
 									<br>
 									<center>
