--- a/RMS/src/main/resources/templates/waiterLogin.html
+++ b/RMS/src/main/resources/templates/waiterLogin.html
@@ -99,13 +99,13 @@ body {
 
 
 								</form>
-								<hr style="height: 10px;">
+							<!-- 	<hr style="height: 10px;">
 								<center>
 									<a href="register" class="btn btn-success ">
 										<h4>&nbsp;&nbsp;Create New Account&nbsp;&nbsp;</h4>
-									</a>
+									</a> 
 
-								</center>
+								</center>  -->
 							</div>
 
 						</div>
