--- a/RMS/src/main/resources/templates/navbar.html
+++ b/RMS/src/main/resources/templates/navbar.html
@@ -52,6 +52,10 @@
 							class="nav-link"
 							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
 							href="/rms/admin/tables">Tables</a></li>
+							<li class="nav-item" style="margin-right: 30px;"><a
+							class="nav-link"
+							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
+							href="/rms/waiter/register">Create Server</a></li>
 						<li class="nav-item" style="margin-right: 30px;"><a
 							class="nav-link"
 							style="font-size: x-large; font-family: cursive; color: white; font-size: 170%;"
