--- a/RMS/src/main/resources/templates/orders.html
+++ b/RMS/src/main/resources/templates/orders.html
@@ -106,13 +106,13 @@ body {
 				<form th:action="@{payment}" method="Get">
 				<input type="hidden" th:value="${totalprice}" name="totalprice">
 				<div class="form-inline">
-					<span
+					<!-- <span
 						style="font-family: cursive; font-size: x-large; color: black; font-size: 160%; margin-left: 55px">No
-						of Splits <input required="required" type="number"
+						of Splits </span> <input required="required" type="hidden"
 						autofocus="autofocus" class="form-control "
 						style="font-family: cursive; color: black; font-size: 120%; margin-left: 30px"
-						id="split" name="split" />
-					</span>
+						id="split" name="split" th:value="1" /> -->
+					
 				</div>
 				<br> <br>
 				<center>
